--- a/instagram22.html
+++ b/instagram22.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000118.jpg" title="Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Same stealthy bag has a blaze orange Cordura interior. #lovestarbicyclebags #handmade #bicycle #cycling #bicyclebag #cordura #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000118.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000119.jpg" title="Finished up a stealthy #lovestarbicyclebags SaddlePack this morning. #handmade #bicycle #cycling #bicyclebag #cordura #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a stealthy #lovestarbicyclebags SaddlePack this morning. #handmade #bicycle #cycling #bicyclebag #cordura #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000119.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000553.jpg" title="#lovestarfactoryteam #mocabang" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>#lovestarfactoryteam #mocabang</small>
+                           </div>
+                           <img src="../lsphotos/image000553.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000083.jpg" title="New mini-bike storage systems at #lovestarbicyclebags H.Q." rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>#lovestarfactoryteam had their sock game on fleek this morning. #sockdoping #bicycle #cycling #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000565.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000566.jpg" title="Woohoo! 206.4 miles, 9000+ calories, and 17.5 hours later I finished the Dirty Kanza 200! Special thanks and so much love to my wife, Roberta for supporting all my crazy training!! Big shout out to @casadewaggoner and @elliotlovestarbicycles for doing this with me, sorry your days didn't end the way you hoped! :-( Big thank you to Matt for being our support crew. And special thanks to @ponylou and the crew at #ponyshop for making sure my bike was in tip top shape. And finally, special thanks to David Englund for teaching how to keep going when it feels like I've got nothing left. #lovestarfactoryteam #crushgravel #dk200 #superx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Woohoo! 206.4 miles, 9000+ calories, and 17.5 hours later I finished the Dirty Kanza 200! Special thanks and so much love to my wife, Roberta for supporting all my crazy training!! Big shout out to @casadewaggoner and @elliotlovestarbicycles for doing this with me, sorry your days didn't end the way you hoped! :-( Big thank you to Matt for being our support crew. And special thanks to @ponylou and the crew at #ponyshop for making sure my bike was in tip top shape. And finally, special thanks to David Englund for teaching how to keep going when it feels like I've got nothing left. #lovestarfactoryteam #crushgravel #dk200 #superx</small>
-                           </div>
-                           <img src="../lsphotos/image000566.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000567.jpg" title="Finish fuel. 161 in the books and just 46 left to go #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Finish fuel. 161 in the books and just 46 left to go #lovestarfactoryteam #crushgravel #dk200</small>
-                           </div>
-                           <img src="../lsphotos/image000567.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000568.jpg" title="Taking a rest at the 1/2 way point. 102 down, 104 to go! #lovestarfactoryteam #crushgravel #dk200" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Taking a rest at the 1/2 way point. 102 down, 104 to go! #lovestarfactoryteam #crushgravel #dk200</small>
-                           </div>
-                           <img src="../lsphotos/image000568.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
