--- a/instagram43.html
+++ b/instagram43.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000325.jpg" title="I think Billy Idol said it best: &quot;nice day for... bike riding...&quot; Or something like that. #lovestarbicyclebags #bikechi #itsspringagain" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>I think Billy Idol said it best: "nice day for... bike riding..." Or something like that. #lovestarbicyclebags #bikechi #itsspringagain</small>
+                           </div>
+                           <img src="../lsphotos/image000325.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000326.jpg" title="Some classic grey and black for this #lovestarbicyclebags SaddlePack. Final stock project for a little while. Starting in on a big custom project. #handmade #cycling #bicycle #bikepacking #bikechi #bicyclebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some classic grey and black for this #lovestarbicyclebags SaddlePack. Final stock project for a little while. Starting in on a big custom project. #handmade #cycling #bicycle #bikepacking #bikechi #bicyclebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000326.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000327.jpg" title="Smiles for miles. #babysnub #futurecyclist #championsystem #striderbikes #Lovestarbicyclebags #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Smiles for miles. #babysnub #futurecyclist #championsystem #striderbikes #Lovestarbicyclebags #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000327.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000328.jpg" title="The youngest member of Lovestar Factory Team dropping in on the technical section of the train station ramp. #futurecyclist #striderbikes #championsystem #evanston #cycling #Lovestarbicyclebags #lilShredder #babysnub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Some recent examples of custom color #Lovestarbicyclebags Saddle Packs. More examples available on ETSY and Facebook. #handmade #cycling #bikebag #bikepacking #bicycle #bicyclebag #custom #bikechi #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000342.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000343.jpg" title="@agonz21 crushing ravine climbs and taking names. #lovestarbicyclebags #cycling #cyclocross #cx #bicycle #bikechi #barryroubaix" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@agonz21 crushing ravine climbs and taking names. #lovestarbicyclebags #cycling #cyclocross #cx #bicycle #bikechi #barryroubaix</small>
-                           </div>
-                           <img src="../lsphotos/image000343.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000344.jpg" title="Lovestar Factory Team cramming in some hill repeats before Barry Roubaix. #lovestarbicyclebags #cycling #barryroubaix #cx #cyclocross #gravel #gravelgrinder #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team cramming in some hill repeats before Barry Roubaix. #lovestarbicyclebags #cycling #barryroubaix #cx #cyclocross #gravel #gravelgrinder #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000344.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000345.jpg" title="Keeping it tight. Saddle bags shouldn't move. #lovestarbicyclebags #handmade #custom #bicyclebag #seatbag #bicycle #cycling #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Keeping it tight. Saddle bags shouldn't move. #lovestarbicyclebags #handmade #custom #bicyclebag #seatbag #bicycle #cycling #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000345.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
