--- a/instagram7.html
+++ b/instagram7.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000944.jpg" title="Beautiful start to the day, and I almost beat the rain home. #cycling #bicycle #bikechi #lakemichigan #cyclocross #cx #cxiscoming #moots #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Beautiful start to the day, and I almost beat the rain home. #cycling #bicycle #bikechi #lakemichigan #cyclocross #cx #cxiscoming #moots #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000944.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000945.jpg" title="Hello old friend 🚲❤️#bicycle #cycling #adventurebike #moots #psychloX #cyclocross #cx #cxiscoming #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Hello old friend 🚲❤️#bicycle #cycling #adventurebike #moots #psychloX #cyclocross #cx #cxiscoming #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000945.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000942.jpg" title="Before & After. #almanzo100 #failmanzo100 #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Before & After. #almanzo100 #failmanzo100 #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000942.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000939.jpg" title="So proud of this guy (and the rest of the #lovestarraceclub crew!) who braved The Almonzo100 race today in driving rain, 20+ mph winds, and 33 degrees in Spring Valley, Minnesota. Enjoy those recovery beers as you plan your next adventure!!! #cycling #lovestarfactoryteam #cyclocross #lovestarraceclub #almonzo100 #mudsweatandgears #adventurebike #elliotlovestarbicycles #lovestar #elliotlovestarbicyclebags #proudofyouson" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -222,45 +261,6 @@
                               <small>#lovestarraceclub ❤️⭐️🚲</small>
                            </div>
                            <img src="../lsphotos/image000924.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000925.jpg" title="#lovestarraceclub send-off ride for @piliu7 - come back from CA and crush us on the hills soon!!" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>#lovestarraceclub send-off ride for @piliu7 - come back from CA and crush us on the hills soon!!</small>
-                           </div>
-                           <img src="../lsphotos/image000925.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000923.jpg" title="#lovestarraceclub fairwell ride to @piliu7 as she heads west for new adventures. #cycling #bicycle #clubride #coffeeride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarraceclub fairwell ride to @piliu7 as she heads west for new adventures. #cycling #bicycle #clubride #coffeeride</small>
-                           </div>
-                           <img src="../lsphotos/image000923.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000922.jpg" title="Singlespeed singletrack shredder. #mtb #dadlife #mountainbiking #clearybikes #adventuredad #raisingstronggirls #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Singlespeed singletrack shredder. #mtb #dadlife #mountainbiking #clearybikes #adventuredad #raisingstronggirls #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000922.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
