--- a/instagram14.html
+++ b/instagram14.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000804.jpg" title="@agonz21 keeping it chill. #fatbike #cycling #bikepacking #bikewinter #icebike #lovestarbicyclebags #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@agonz21 keeping it chill. #fatbike #cycling #bikepacking #bikewinter #icebike #lovestarbicyclebags #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000804.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000805.jpg" title="&quot;Stop, collaborate, and listen.&quot; First ever ride across a frozen lake. Thanks to @elliotlovestarbicycles for the photos and pep talk and bike #lovestarraceclub #fatbikenchill" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>"Stop, collaborate, and listen." First ever ride across a frozen lake. Thanks to @elliotlovestarbicycles for the photos and pep talk and bike #lovestarraceclub #fatbikenchill</small>
+                           </div>
+                           <img src="../lsphotos/image000805.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000802.jpg" title="❄️🚲🌅 #fatbike #bikewinter #bikepacking #cycling #icebike #bicycle #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>❄️🚲🌅 #fatbike #bikewinter #bikepacking #cycling #icebike #bicycle #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000802.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000801.jpg" title="Beautiful sunrise ride this morning #lovestarraceclub #rentalbike #sunrise #barrierisland" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -220,45 +259,6 @@
                               <small>Gotta love cross. One of my finer moments captured right here. Photo credits @snowymountainphotography #melascx #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000785.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000783.jpg" title="Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Fat bike commute courtesy of @elliotlovestarbicycles #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000783.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000781.jpg" title="We're having a picnic. #winterbike #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>We're having a picnic. #winterbike #fatbike #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000781.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000777.jpg" title="It's amazing how fat biking in the snow with good friends makes you feel like a little kid again #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>It's amazing how fat biking in the snow with good friends makes you feel like a little kid again #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000777.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
