--- a/instagram2.html
+++ b/instagram2.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001045.jpg" title="Sunrise at the end of the ride. #winteriscoming" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise at the end of the ride. #winteriscoming</small>
+                           </div>
+                           <img src="../lsphotos/image001045.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001043.jpg" title="Dusted & dialed-in on my cross setup. #moots" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Dusted & dialed-in on my cross setup. #moots</small>
+                           </div>
+                           <img src="../lsphotos/image001043.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001042.jpg" title="Pre-school commuter train. #cat6" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Pre-school commuter train. #cat6</small>
+                           </div>
+                           <img src="../lsphotos/image001042.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001039.jpg" title="#babyARC ripping ramps right along side his sister. #lilshredder" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -224,49 +263,6 @@
                               <small>This picture makes me so happy I had to post it again 😄#dadlife</small>
                            </div>
                            <img src="../lsphotos/image001025.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001024.jpg" title="Morning miles . .
-
-#lovestarraceclub #sunrise #cycling #lovestar" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Morning miles . .
-
-#lovestarraceclub #sunrise #cycling #lovestar</small>
-                           </div>
-                           <img src="../lsphotos/image001024.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001023.jpg" title="Small peloton...big competition. #dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Small peloton...big competition. #dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image001023.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001022.jpg" title="DPRT: a #lovestarraceclub / #unioncycling joint." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>DPRT: a #lovestarraceclub / #unioncycling joint.</small>
-                           </div>
-                           <img src="../lsphotos/image001022.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
