--- a/instagram29.html
+++ b/instagram29.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000176.jpg" title="Sunset. #fatbike #bikepackingbags #bikepacking #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset. #fatbike #bikepackingbags #bikepacking #cycling #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000176.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000177.jpg" title="Sunshine & warmer temps today! Getting in a quick spin before the snow comes back. #cycling #bikewinter #moots #lovestarfactoryteam #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunshine & warmer temps today! Getting in a quick spin before the snow comes back. #cycling #bikewinter #moots #lovestarfactoryteam #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000177.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000631.jpg" title="Some very Belgian weather this afternoon. #cycling #bikewinter #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Some very Belgian weather this afternoon. #cycling #bikewinter #moots #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000631.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000632.jpg" title="Today. #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>theandyhudson</h4>
@@ -220,45 +259,6 @@
                               <small>#babySNUB 's micro-pogies worked out so well, I started cutting fabric today to make my own pair...we'll see how it goes #lovestarbicyclebags #handmade #bikewinter #pogies #cycling #bikepacking #bikepackingbags #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000191.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000635.jpg" title="#lovestarfactoryteam Rollin' fat into the coffee shop. #fatbike #bikewinter #cycling #2fat2furious #stupidcarruinedmypicture " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam Rollin' fat into the coffee shop. #fatbike #bikewinter #cycling #2fat2furious #stupidcarruinedmypicture </small>
-                           </div>
-                           <img src="../lsphotos/image000635.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000636.jpg" title="Cold maiden voyage for a teammate's fatbike this morning. #2fat2furious #fatbike #lovestarfactoryteam #bikewinter #cycling " rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold maiden voyage for a teammate's fatbike this morning. #2fat2furious #fatbike #lovestarfactoryteam #bikewinter #cycling </small>
-                           </div>
-                           <img src="../lsphotos/image000636.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000637.jpg" title="Winter bike bonanza! #lsb #lovestarfactoryteam #itsnotthatcold" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Winter bike bonanza! #lsb #lovestarfactoryteam #itsnotthatcold</small>
-                           </div>
-                           <img src="../lsphotos/image000637.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
