--- a/instagram40.html
+++ b/instagram40.html
@@ -6,6 +6,49 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000290.jpg" title="Big bird, big tires...happy Friday! #fatbikefriday #fatbike #bicycle #cycling #lovestarfactoryteam #bikechi #lovestarbicyclebags #handmade #bikepacking #framebag #seatbag #bicyclebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Big bird, big tires...happy Friday! #fatbikefriday #fatbike #bicycle #cycling #lovestarfactoryteam #bikechi #lovestarbicyclebags #handmade #bikepacking #framebag #seatbag #bicyclebag</small>
+                           </div>
+                           <img src="../lsphotos/image000290.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000730.jpg" title="#babysnub shreddin' the bike lane. #cycling #lovestarfactoryteam #futurecyclist #bicycle #striderbikes #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#babysnub shreddin' the bike lane. #cycling #lovestarfactoryteam #futurecyclist #bicycle #striderbikes #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000730.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000291.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000291.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000292.jpg" title="Some muddy #lovestarbicyclebags product testing. #handmade #bicyclebag #fatbike #bikechi #bicycle #cycling #framebag #bikepacking #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -228,45 +271,6 @@ Added a custom #lovestarbicyclebags top tube bag to this #bikepacking set up. #f
                               <small>Beautiful morning for a bike ride! #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000737.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000738.jpg" title="A couple of #lovestarfactoryteam riders doing some grass hill repeats at the local park. #cycling #cyclocross #cx #bikechi #bicycle #striderbikes #fatbike #adventuredad #futurecyclist #babyGnar #babysnub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A couple of #lovestarfactoryteam riders doing some grass hill repeats at the local park. #cycling #cyclocross #cx #bikechi #bicycle #striderbikes #fatbike #adventuredad #futurecyclist #babyGnar #babysnub</small>
-                           </div>
-                           <img src="../lsphotos/image000738.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000302.jpg" title="Color match test... #bikepacking #framebag #handmade #lovestarbicyclebags #bicyclebag #cycling #fatbike #bicycle #bikechi #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Color match test... #bikepacking #framebag #handmade #lovestarbicyclebags #bicyclebag #cycling #fatbike #bicycle #bikechi #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000302.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000303.jpg" title="#lovestarbicyclebags custom #framebag begins. It's been a while since I made anything for my own bikes...nothing like high contrast stitching to make a bag pop. #handmade #bicycle #bicyclebag #bikepacking #cycling #bikechi #fatbike #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarbicyclebags custom #framebag begins. It's been a while since I made anything for my own bikes...nothing like high contrast stitching to make a bag pop. #handmade #bicycle #bicyclebag #bikepacking #cycling #bikechi #fatbike #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000303.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
