--- a/instagram48.html
+++ b/instagram48.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000423.jpg" title="Regram from @chateauduwaggoner of today's race at Dan Ryan Woods. Lovestar Factory Team game face at the start of the 4/5 race. #drwcx #cyclocross #cycling #cx #lovestarbicycles #lovestarbicyclebags #chicago #chicagocrosscup #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Regram from @chateauduwaggoner of today's race at Dan Ryan Woods. Lovestar Factory Team game face at the start of the 4/5 race. #drwcx #cyclocross #cycling #cx #lovestarbicycles #lovestarbicyclebags #chicago #chicagocrosscup #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000423.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000424.jpg" title="Stepped up my cat-6 game today. Long ride into work rockin the matching helmet and backpack... #cycling #bikecommute #cat6 #cyclocross #championsystem #stylesformiles #bikechi #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stepped up my cat-6 game today. Long ride into work rockin the matching helmet and backpack... #cycling #bikecommute #cat6 #cyclocross #championsystem #stylesformiles #bikechi #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000424.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000425.jpg" title="Barrier & run up practice all in one. #dprt #cyclocross #cx #lovestarbicycles #lovestarbicyclebags #cycling #bikechi #moots #psychloX" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Barrier & run up practice all in one. #dprt #cyclocross #cx #lovestarbicycles #lovestarbicyclebags #cycling #bikechi #moots #psychloX</small>
+                           </div>
+                           <img src="../lsphotos/image000425.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000426.jpg" title="2nd day this week riding the #DPRT I love Riding in the fall. #cyclocross #cx #moots #gravel #gravelgrinder #bikechi #lovestarbicycles #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Starting the build process on a customer's custom frame bag. All black exterior with some poppin' lime interior. #bikepacking #lovestarbicyclebags #lovestarbicycles #handmade #madeinchicago #bikechi #cycling #gravelgrinder #gravel #framebag #bikebag</small>
                            </div>
                            <img src="../lsphotos/image000442.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000443.jpg" title="Second bag of the night is this Rasta themed SaddlePack. Lots of little details on this one. #handmade #bikechi #bikepacking #bicycle #sewrad #cycling #madeinchicago #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Second bag of the night is this Rasta themed SaddlePack. Lots of little details on this one. #handmade #bikechi #bikepacking #bicycle #sewrad #cycling #madeinchicago #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000443.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000444.jpg" title="Today's ride was about trying to outrun the rain. Great group, tough ride, knobbies made me work a little extra today. Stupendous waffle for a well earned post ride reward. #lovestarbicyclebags #cycling #cyclocross #bikechi #moots #liegewaffle #delbescorner" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Today's ride was about trying to outrun the rain. Great group, tough ride, knobbies made me work a little extra today. Stupendous waffle for a well earned post ride reward. #lovestarbicyclebags #cycling #cyclocross #bikechi #moots #liegewaffle #delbescorner</small>
-                           </div>
-                           <img src="../lsphotos/image000444.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000445.jpg" title="The Large Lovestar SaddlePack next to our Standard sized SaddlePack. #carrymorestuff #cycling #bikepacking #lovestarbicyclebags #handmade #madeinchicago #madeintheusa #sewrad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>The Large Lovestar SaddlePack next to our Standard sized SaddlePack. #carrymorestuff #cycling #bikepacking #lovestarbicyclebags #handmade #madeinchicago #madeintheusa #sewrad</small>
-                           </div>
-                           <img src="../lsphotos/image000445.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
