--- a/instagram9.html
+++ b/instagram9.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000906.jpg" title="Pasty legs. #cycling #bicycle #bikechi #sunsoutgunsout #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Pasty legs. #cycling #bicycle #bikechi #sunsoutgunsout #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000906.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000902.jpg" title="Squad. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Squad. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000902.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000903.jpg" title="Chicken and donuts! #lovestarraceclub #kenosha #goodfriday" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Chicken and donuts! #lovestarraceclub #kenosha #goodfriday</small>
+                           </div>
+                           <img src="../lsphotos/image000903.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000901.jpg" title="I seriously might list &quot;first spring ride that I get to wear shorts again&quot; on my top 10 list of best feelings in the world. #cycling #bicycle #bikechi #bikewinter #ridecannondale #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -230,45 +269,6 @@ Thank you to that store team for taking such good care of us...it was appreciate
                               <small>Just a few of my awesome teammates. We call this The Phases of the Smiles. Good times at #barryroubaix #lovestarraceclub</small>
                            </div>
                            <img src="../lsphotos/image000881.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000879.jpg" title="So much grit. #lovestarraceclub #gravelgrinder #barryroubaix" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>So much grit. #lovestarraceclub #gravelgrinder #barryroubaix</small>
-                           </div>
-                           <img src="../lsphotos/image000879.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000877.jpg" title="A sampling of @barryroubaix1 carnage on #lovestarbicyclebags SaddlePacks. #gravel #gravelgrinder #lovestarraceclub #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A sampling of @barryroubaix1 carnage on #lovestarbicyclebags SaddlePacks. #gravel #gravelgrinder #lovestarraceclub #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000877.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000882.jpg" title="Forgot to take a photo after the race when I was still wet, dirty, and freezing so you get this instead. Barry Roubaix was epic this year: cold, soaking rains, wind, you name it. A real spring classic! #lovestarraceclub #barryroubaix #superx #barryroubaix2017" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Forgot to take a photo after the race when I was still wet, dirty, and freezing so you get this instead. Barry Roubaix was epic this year: cold, soaking rains, wind, you name it. A real spring classic! #lovestarraceclub #barryroubaix #superx #barryroubaix2017</small>
-                           </div>
-                           <img src="../lsphotos/image000882.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
